增加解析电影播放地址

--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,84 @@
-<div class="item">
-    <div class="plot"><a href="/search.php?searchword=%E6%96%87%E7%89%A7%E9%87%8E">&#x6587;&#x7267;&#x91CE;</a>&#xA0;&#x6267;&#x5BFC;&#x7684;2018&#x5185;&#x5730;&#x559C;&#x5267;&#x7247;&#x7535;&#x5F71;&#x300A;<a
-            href="http://www.dadatu.com/xj/wobushiyaoshen/">&#x6211;&#x4E0D;&#x662F;&#x836F;&#x795E;</a>&#x300B;&#x7531;<a
-            href="/search.php?searchword=%E5%BE%90%E5%B3%A5">&#x5F90;&#x5CE5;</a>&#xA0;<a
-            href="/search.php?searchword=%E7%8E%8B%E4%BC%A0%E5%90%9B">&#x738B;&#x4F20;&#x541B;</a>&#xA0;<a
-            href="/search.php?searchword=%E5%91%A8%E4%B8%80%E5%9B%B4">&#x5468;&#x4E00;&#x56F4;</a>&#xA0;<a
-            href="/search.php?searchword=%E8%B0%AD%E5%8D%93">&#x8C2D;&#x5353;</a>&#xA0;<a
-            href="/search.php?searchword=%E7%AB%A0%E5%AE%87">&#x7AE0;&#x5B87;</a>&#xA0;&#x4E3B;&#x6F14;&#xFF0C;<a
-            href="https://www.dadatu.com" target="_blank">&#x8FBE;&#x8FBE;&#x5154;&#x7535;&#x5F71;</a>&#x514D;&#x8D39;&#x4E3A;&#x60A8;&#x63D0;&#x4F9B;&#x5728;&#x7EBF;&#x89C2;&#x770B;&#xFF0C;&#x7535;&#x5F71;&#x8BE6;&#x60C5;&#xFF1A;&#x5F71;&#x7247;&#x8BB2;&#x8FF0;&#x4E86;&#x795E;&#x6CB9;&#x5E97;&#x8001;&#x677F;&#x7A0B;&#x52C7;&#x4ECE;&#x4E00;&#x4E2A;&#x4EA4;&#x4E0D;&#x8D77;&#x623F;&#x79DF;&#x7684;&#x7537;&#x6027;&#x4FDD;&#x5065;&#x54C1;&#x5546;&#x8D29;&#xFF0C;&#x4E00;&#x8DC3;&#x6210;&#x4E3A;&#x5370;&#x5EA6;&#x4EFF;&#x5236;&#x836F;&#x201C;&#x683C;&#x5217;&#x5B81;&#x201D;&#x72EC;&#x5BB6;&#x4EE3;&#x7406;&#x5546;&#x7684;&#x6545;&#x4E8B;&#x3002;&#x4E00;&#x4F4D;&#x4E0D;&#x901F;&#x4E4B;&#x5BA2;&#x7684;&#x610F;&#x5916;&#x5230;&#x8BBF;&#xFF0C;&#x6253;&#x7834;&#x4E86;&#x795E;&#x6CB9;&#x5E97;&#x8001;&#x677F;&#x7A0B;&#x52C7;&#x7684;&#x5E73;&#x51E1;&#x4EBA;&#x751F;&#xFF0C;&#x4ED6;&#x4ECE;&#x4E00;&#x4E2A;&#x4EA4;&#x4E0D;&#x8D77;&#x623F;&#x79DF;&#x7684;&#x7537;&#x6027;&#x4FDD;&#x5065;&#x54C1;&#x5546;&#x8D29;&#xFF0C;&#x4E00;&#x8DC3;&#x6210;&#x4E3A;&#x5370;&#x5EA6;&#x4EFF;&#x5236;&#x836F;&#x201C;&#x683C;&#x5217;&#x5B81;&#x201D;&#x7684;&#x72EC;&#x5BB6;&#x4EE3;&#x7406;&#x5546;&#x3002;&#x6536;&#x83B7;&#x5DE8;&#x989D;&#x5229;&#x6DA6;&#x7684;&#x4ED6;&#xFF0C;&#x751F;&#x6D3B;&#x5267;&#x70C8;&#x53D8;&#x5316;&#xFF0C;&#x88AB;&#x75C5;&#x60A3;&#x4EEC;&#x51A0;&#x4EE5;&#x201C;&#x836F;&#x795E;&#x201D;&#x7684;&#x79F0;&#x53F7;&#x3002;&#x4F46;&#x662F;&#xFF0C;&#x4E00;&#x573A;&#x5173;&#x4E8E;&#x6551;&#x8D4E;&#x7684;&#x62C9;&#x952F;&#x6218;&#x4E5F;&#x5728;&#x6CE2;&#x6D9B;&#x6697;&#x6D8C;&#x4E2D;&#x6162;&#x6162;&#x5C55;&#x5F00;
-        &#x3002;&#x5982;&#x679C;&#x60A8;&#x89C9;&#x5F97;&#x8FD9;&#x90E8;&#x7535;&#x5F71;&#x8FD8;&#x4E0D;&#x9519;&#xFF0C;&#x53EF;&#x4EE5;&#x628A;&#x300A;<a
-                href="http://www.dadatu.com/xj/wobushiyaoshen/">&#x6211;&#x4E0D;&#x662F;&#x836F;&#x795E;</a>&#x300B;&#x5206;&#x4EAB;&#x7ED9;&#x670B;&#x53CB;&#xFF0C;&#x770B;&#x7684;&#x4EBA;&#x8D8A;&#x591A;&#x64AD;&#x653E;&#x901F;&#x5EA6;&#x4F1A;&#x66F4;&#x5FEB;&#x54E6;&#xFF01;<a
-                href="https://www.dadatu.com/lunlipian/" target="_blank">&#x4F26;&#x7406;&#x7247;</a>&#x680F;&#x76EE;&#x6709;&#x66F4;&#x591A;&#x7CBE;&#x5F69;&#x7B49;&#x7740;&#x4F60;&#xFF01;
-    </div>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport"/>
+    <style>
+        body {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+    <script>
+
+      function enable() {
+        console.log('enable');
+        // 打开下拉刷新模式
+        //  onRefresh 该参数可选，如果传入此参数需要在onRefresh函数中实现具体的刷新逻辑。默认的刷新逻辑是重新加载了一次页面
+        bxJsBridge.setMode(JSON.stringify({
+          mode: 'pullFromStart',
+          onRefreshComplete: 'onRefreshComplete',
+          //onRefresh: 'onRefresh'
+        }))
+      }
+
+      function onRefresh() {
+        console.log('刷新操作');
+        // 执行刷新逻辑，例如重新拉取数据等
+        // 模拟拉取数据
+        setTimeout(function() {
+          // 刷新完成后必须调用下面的方法通知原生刷新组件刷新完毕
+          bxJsBridge.setRefreshComplete();
+        }, 1000)
+      }
+
+      function onRefreshComplete() {
+        console.log('刷新完成');
+        // TODO 刷新完毕，可以在这里执行提示刷新完成的逻辑
+        showToast('已更新为最新内容')
+      }
+      //enable();
+
+      function reload() {
+        //window.location.reload();
+        //window.open('./error.html')
+        showToast('已更新为最新内容')
+      }
+
+      function showToast(message) {
+        console.log("show head hint!!");
+        const tips = document.createElement('div');
+        const p = message;
+        tips.id = 'tips';
+        tips.style.height = '36px';
+        tips.style.transition = '300ms top';
+        tips.style.backgroundColor = '#D9EAF1';
+        tips.style.position = 'absolute';
+        tips.style.left = '0';
+        tips.style.right = '0';
+        tips.style.top = '-36px';
+        tips.style.textAlign = 'center';
+        tips.style.lineHeight = '36px';
+        tips.style.color = '#00AAF1';
+        tips.style.fontSize = '14px';
+        tips.innerText = p;
+        document.body.appendChild(tips);
+        setTimeout(function () {
+          tips.style.top = '0px';
+        }, 200);
+
+
+        setTimeout(function () {
+          tips.style.top = '-36px'
+        }, 3000)
+      }
+
+    </script>
+</head>
+<body>
+<input type="button" value="enable" style="padding: 12px; font-size: 14px" onclick="enable()">
+<input type="button" value="reload" style="padding: 12px; font-size: 14px" onclick="reload()">
+<a href="bxapp://mini_app?page=/pages/index">跳转至小程序</a>
+<video style="width: 100%; height: 50%; background-color: black" src="http://zuikzy.win7i.com/2018/07/10/FD2KhGi7xEzClPR9/playlist.m3u8"></video>
+</body>
+</html>
