--- a/public/error.html
+++ b/public/error.html
@@ -2,27 +2,53 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-  <meta name="description" content="HuHu">
-  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <link rel="shortcut icon" href="App/Home/Public/images/huhu.png">
-  <title>HuHu 错误提示</title>
-  <style type="text/css">
-    body,
-    html,
-    div {
-      background-color: #000;
-      padding: 0;
-      margin: 0;
-      width: 100%;
-      height: 100%;
-      color: #aaa
-    }
-  </style>
+    <meta name="description" content="HuHu">
+    <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <link rel="shortcut icon" href="App/Home/Public/images/huhu.png">
+    <title>HuHu 错误提示</title>
+    <style type="text/css">
+        body,
+        html,
+        div {
+            background-color: #000;
+            padding: 0;
+            margin: 0;
+            width: 100%;
+            height: 100%;
+            color: #aaa
+        }
+    </style>
+    <script>
+        function sharedSuccess() {
+            console.log('sharedSuccess')
+        }
+
+        function sharedError() {
+          console.log('sharedError')
+        }
+
+
+        document.onreadystatechange = () => {
+          if (document.readyState === 'complete') {
+
+            HtmlViewer.getHtmlObj(JSON.stringify({
+              title: 'sdasd',
+              description: 'asdasd',
+              imgUrl: 'asdasd',
+              url: 'http://www.baidu.com/',
+              successCallback: 'sharedSuccess',
+              errorCallback: 'sharedError'
+            }))
+
+          }
+        }
+    </script>
 </head>
 
 <body style="overflow-y:hidden;">
-  <div id="loading" style="font-weight:bold;padding-top:120px;" align="center">请添加[localhost]域名为白名单。</div>
+<div></div>
+<div id="loading" style="font-weight:bold;padding-top:120px;" align="center">请添加[localhost]域名为白名单。</div>
 </body>
 
 </html>
