优化电影collection结构

--- a/public/error.html
+++ b/public/error.html
@@ -49,6 +49,7 @@
 <body style="overflow-y:hidden;">
 <div></div>
 <div id="loading" style="font-weight:bold;padding-top:120px;" align="center">请添加[localhost]域名为白名单。</div>
+<input type="button" value="shared" onclick="bxJsBridge.shared()">
 </body>
 
 </html>
