--- a/public/index.html
+++ b/public/index.html
@@ -80,5 +80,6 @@
 <input type="button" value="reload" style="padding: 12px; font-size: 14px" onclick="reload()">
 <a href="bxapp://mini_app?page=/pages/index">跳转至小程序</a>
 <video style="width: 100%; height: 50%; background-color: black" src="http://zuikzy.win7i.com/2018/07/10/FD2KhGi7xEzClPR9/playlist.m3u8"></video>
+<input type="button" value="shared" onclick="window.open('./error.html')">
 </body>
 </html>
